Fix layout issues caused by long variable names / values.

--- a/utilities/inspector/assets/main.css
+++ b/utilities/inspector/assets/main.css
@@ -215,7 +215,6 @@ table .absolute, table .relative {
 	Dumps
 */
 a.dump {
-	display: inline-block;
 	color: inherit;
 }
 pre.dump {
